# MoviePilot-Plugins2

./: .gitignore  README.md  package.v2.json
.github/ISSUE_TEMPLATE/: rfc.yml
.github/workflows/: build-wheel.yml  plugins-release.yml  rust_build_full_sync_strm.yml  test-p115strmhelper.yml
dev/: prepare_plugin_deps.py
dev/p115strmhelper/: webhook_delete.json
docs/p115strmhelper/: API_STRM生成功能文档.md  BATCH_TRANSFER_DESIGN.md  README.md
frontend/p115strmhelper/src/: App.vue  main.js
plugins.v2/bangumidailydiscover/: __init__.py
plugins.v2/cctvdiscover/: __init__.py
plugins.v2/mangguodiscover/: __init__.py
plugins.v2/mediawarp/: __init__.py
plugins.v2/migudiscover/: __init__.py
plugins.v2/p115disk/: __init__.py  cache.py  p115_api.py  requirements.txt  tools.py
plugins.v2/p115strmhelper/: __init__.py  api.py  bundle.json  migration_meta.json  requirements.txt  service.py  version.py
plugins.v2/p115strmhelper/core/: aliyunpan.py  cache.py  config.py  p115.py  scrape.py  u115_open.py
plugins.v2/p115strmhelper/database/: env.py  gen.py  script.py.mako
plugins.v2/p115strmhelper/db_manager/: __init__.py  file_oper.py  init.py  life_event.py  moviepilot_transfer.py  oper.py  (+1 more)
plugins.v2/p115strmhelper/rust_utils/full_strm_sync/: Cargo.toml  pyproject.toml
plugins.v2/p115strmhelper/rust_utils/full_strm_sync/src/: lib.rs  processor.rs  types.rs
plugins.v2/p123disk/: __init__.py  p123_api.py  requirements.txt  tool.py
plugins.v2/p123strmhelper/: __init__.py
plugins.v2/samediasyncdel/: __init__.py
plugins.v2/tencentvideodiscover/: __init__.py
(+184 files in other folders)
