[package]
name = "full_strm_sync"
version = "0.1.4"
edition = "2021"

[lib]
name = "full_strm_sync"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
rayon = "1.10.0"
aho-corasick = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
